Ajout API_KEY dans display_position sur flask_app_form

--- a/templates_form/map.html
+++ b/templates_form/map.html
@@ -17,7 +17,8 @@
 
     <!-- Affichage de l'estimation du retard -->
     <div class="retard-estimation">
-        Estimation du retard sur votre vol à partir de nos modèles : {{ retard_pred }}
+        Estimation du retard sur votre vol à partir de nos modèles :
+        <strong style="font-size: 1.2em;">{{ retard_pred }}</strong>
     </div>
     
     <div id="map"></div>
